k8s/hello-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otus-hw-deployment
  labels:
    app: otus-hw
spec:
  replicas: 3
  selector:
    matchLabels:
      app: otus-hw
  template:
    metadata:
      labels:
        app: otus-hw
    spec:
      containers:
      - name: otus-hw
        image: krtvand/otus-hw:2.3
        ports:
        - containerPort: 8000
        livenessProbe:
          httpGet:
            path: /liveness
            port: 8000
