k8s/hello-app/30-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otus-hw-service
spec:
  selector:
    app: otus-hw
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
